# historia

./: .gitignore  Cargo.toml  README.md
.github/scripts/: build-dmg.sh
src/: main.rs  updater.rs
src/hud/: mod.rs  persistence.rs  settings.rs  state.rs
src/platform/: mod.rs
src/platform/macos/: app.rs  display.rs  mod.rs  objc_utils.rs  observer.rs  settings_menu.rs
src/platform/macos/hud/: card.rs  card_preview.rs  clipboard.rs  collection.rs  controller.rs  events.rs  mod.rs  panel.rs  search.rs
